--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             </div>            
         </div>  
 
+        <div class="card card-shadow">
+            <div class="card-header card-image"><img src="images/Mei looks at chuu.bmp"></div>
+            <div class="card-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam vitae soluta architecto dolorum quae atque veniam veritatis ipsa odio tenetur.
+            </div>
+            <div class="card-footer">
+                <button class="btn">Boop me</button>
+                <button class="btn btn-outline">Boop me harder</button>
+            </div>            
+        </div>  
     </div>
  
 </body>
